projects/takeout/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --bg-color: #eaeeca;
    --font-primary: 'Roboto';
    --font-size-p: 18px;
    --font-size-h1: 30px;
    --font-size-h2: 28px;
    --font-size-container-h: 20px;
    --font-size-container-p: 16px;
    --text-color: #000; 
}

body{
    background-color: var(--bg-color);
    font-family: var(--font-primary);
    font-size: var(--font-size-p);
    color: var(--text-color);
}

.header {
    height: 80px;
    background: #fff;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 60px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}
h1 a{
    text-decoration: none;
    color: var(--text-color);
}

.nav{
    list-style: none;
    display: flex;
    gap: 20px;
}
.nav a{
    text-decoration: none;
    color: var(--text-color);
}
#content {
    width: 100%;
    max-width: 1300px;
    margin: 2rem auto; 
    display: flex;
    flex-direction: column; 
    align-items: center; 
    justify-content: center; 
    min-height: 100vh;
    line-height: 1.5;
}

#intro{
    display: flex;
    justify-content: center;
    align-items: center;
}

.into-img{
    width: 176px;
    height: auto;
}

